# orderbooksim

./: .gitignore  CMakeLists.txt  README.md  main.cpp  run.sh
generatedData/: marketData.csv  marketData_10.csv  marketData_11.csv  marketData_12.csv  marketData_13.csv  marketData_14.csv  marketData_15.csv  marketData_16.csv  marketData_17.csv  marketData_18.csv  marketData_19.csv  marketData_2.csv  marketData_20.csv  marketData_3.csv  marketData_4.csv  marketData_5.csv  marketData_6.csv  marketData_7.csv  marketData_8.csv  marketData_9.csv
implementation/: something.ipynb  stock_dev.ipynb  visualizeOHLCV.py  visualizeTickData.py
include/: simulationContext.h
include/graph/: info.h  traderNetwork.h
include/latency/: latency.h  latentTicket.h
include/orderbook/: aggregationLog.h  ask.h  bid.h  ledger.h  ohlcv.h  ticket.h  tradeRecord.h
include/trader/: traders.h
include/trader/models/: noisyTrader.h
include/traders/: traderType.h  traders.h
include/traders/models/: noisyTrader.h
src/: CMakeLists.txt  simulationContext.cpp
src/graph/: CMakeLists.txt  traderGraph.cpp
src/latency/: latency.cpp  latentTicket.cpp
src/orderbook/: CMakeLists.txt  aggregationLog.cpp  ask.cpp  bid.cpp  ledger.cpp  ohlcv.cpp  ticket.cpp  tradeRecord.cpp
src/traders/: CMakeLists.txt  traders.cpp
src/traders/models/: CMakeLists.txt  noisyTrader.cpp
tests/: tests.cpp
